--- a/Exercises.ipynb
+++ b/Exercises.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.7167331911605035"
+       "0.8667931474824088"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -19,7 +19,7 @@
    "source": [
     "import numpy as np\n",
     "S = np.array([13.9, 12.47, 11.48, 10.03, 9.45])\n",
-    "sum(S[:3]**2)/ sum(S**2) "
+    "sum(S[:4]**2)/ sum(S**2) "
    ]
   },
   {
@@ -52,7 +52,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.8.13 ('ML')",
    "language": "python",
    "name": "python3"
   },
@@ -66,12 +66,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "3b2bc697152991137dd9b23929340b8ad7150a811c11ef923b862f0d354817f4"
+    "hash": "a2f6c66c89ad4c8419177551668bc68e5b63841305411eba2146a4407b0a55c3"
    }
   }
  },
