--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
     "    df.set_index('KFold', inplace=True)\n",
     "    return df\n",
     "\n",
-    "def twolevelcv(X: np.array, y: np.array, k1: int, k2: int, models: list, params: dict):\n",
+    "def twolevelcv(X: np.array, y: np.array, k1: int, k2: int, models: list, params: dict, rs: int):\n",
     "    \"\"\"Allows to compute two level crossvalidation.\n",
     "\n",
     "    Args:\n",
@@ -82,7 +82,7 @@
     "        k2 (int): Nº of inner folds\n",
     "        models (list): List of models for comparison\n",
     "        params (dict): Dictionary including the set of parameters. In this case we only tune 1 parameter per model.\n",
-    "\n",
+    "        rs (int): Random state\n",
     "    Returns:\n",
     "        df: Dataframe\n",
     "    \"\"\"\n",
@@ -91,11 +91,11 @@
     "    names = [type(m).__name__ for m in models]\n",
     "    col_names = ['Param. Value', 'Error']\n",
     "    df = dataset_creator(names, col_names, k1)\n",
-    "    kf1 = StratifiedKFold(k1, shuffle = True)\n",
+    "    kf1 = StratifiedKFold(k1, shuffle = True, random_state=rs)\n",
     "    # first level split\n",
     "    for train_idx1, test_idx1 in kf1.split(X, y):\n",
     "        k += 1\n",
-    "        kf2 = StratifiedKFold(k2, shuffle = True)\n",
+    "        kf2 = StratifiedKFold(k2, shuffle = True, random_state=rs)\n",
     "        print(f'Computing KFold {k}/{k1}...')\n",
     "        # second level split\n",
     "        for train_idx2, test_idx2 in tqdm(kf2.split(X[train_idx1, :], y[train_idx1]), total = k2):\n",
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -552,7 +552,7 @@
     "        early_stopping=True, validation_fraction=0.2, warm_start=True, verbose=False, learning_rate ='adaptive', learning_rate_init=0.01)]\n",
     "k1 = 10\n",
     "k2 = 10\n",
-    "Table = twolevelcv(X = X_stdz, y = y_, k1 = k1, k2 = k2, models = models, params = params)"
+    "Table = twolevelcv(X = X_stdz, y = y_, k1 = k1, k2 = k2, models = models, params = params, rs = random_state)"
    ]
   },
   {
