--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,11 +360,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = LogisticRegression(multi_class='multinomial', solver='lbfgs')"
+    "# model = LogisticRegression(multi_class='multinomial', solver='lbfgs')"
    ]
   },
   {
@@ -381,11 +381,11 @@
     }
    ],
    "source": [
-    "cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
-    "# evaluate the model and collect the scores\n",
-    "n_scores = cross_val_score(model, X_stdz, y_, scoring = 'accuracy', cv=cv, n_jobs=-1)\n",
-    "# report the model performance\n",
-    "print('Mean Accuracy: %.3f (+-%.3f)' % (np.mean(n_scores), np.std(n_scores)))"
+    "# cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
+    "# # evaluate the model and collect the scores\n",
+    "# n_scores = cross_val_score(model, X_stdz, y_, scoring = 'accuracy', cv=cv, n_jobs=-1)\n",
+    "# # report the model performance\n",
+    "# print('Mean Accuracy: %.3f (+-%.3f)' % (np.mean(n_scores), np.std(n_scores)))"
    ]
   },
   {
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +411,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:23<00:00,  2.38s/it]\n"
+      "100%|██████████| 10/10 [00:11<00:00,  1.17s/it]\n"
      ]
     },
     {
@@ -425,7 +425,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:21<00:00,  2.16s/it]\n"
+      "100%|██████████| 10/10 [00:10<00:00,  1.05s/it]\n"
      ]
     },
     {
@@ -439,7 +439,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:21<00:00,  2.13s/it]\n"
+      "100%|██████████| 10/10 [00:11<00:00,  1.13s/it]\n"
      ]
     },
     {
@@ -453,7 +453,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:21<00:00,  2.16s/it]\n"
+      "100%|██████████| 10/10 [00:11<00:00,  1.15s/it]\n"
      ]
     },
     {
@@ -467,7 +467,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:31<00:00,  3.16s/it]\n"
+      "100%|██████████| 10/10 [00:12<00:00,  1.21s/it]\n"
      ]
     },
     {
@@ -481,7 +481,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:27<00:00,  2.79s/it]\n"
+      "100%|██████████| 10/10 [00:11<00:00,  1.19s/it]\n"
      ]
     },
     {
@@ -495,7 +495,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:27<00:00,  2.79s/it]\n"
+      "100%|██████████| 10/10 [00:11<00:00,  1.18s/it]\n"
      ]
     },
     {
@@ -509,7 +509,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:27<00:00,  2.75s/it]\n"
+      "100%|██████████| 10/10 [00:11<00:00,  1.19s/it]\n"
      ]
     },
     {
@@ -523,7 +523,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:29<00:00,  2.96s/it]\n"
+      "100%|██████████| 10/10 [00:12<00:00,  1.21s/it]\n"
      ]
     },
     {
@@ -537,7 +537,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:29<00:00,  2.96s/it]\n"
+      "100%|██████████| 10/10 [00:13<00:00,  1.32s/it]\n"
      ]
     }
    ],
@@ -554,6 +554,191 @@
     "k2 = 10\n",
     "Table = twolevelcv(X = X_stdz, y = y_, k1 = k1, k2 = k2, models = models, params = params, rs = random_state)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th colspan=\"2\" halign=\"left\">LogisticRegression</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">DummyClassifier</th>\n",
+       "      <th colspan=\"2\" halign=\"left\">MLPClassifier</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th></th>\n",
+       "      <th>Param. Value</th>\n",
+       "      <th>Error</th>\n",
+       "      <th>Param. Value</th>\n",
+       "      <th>Error</th>\n",
+       "      <th>Param. Value</th>\n",
+       "      <th>Error</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>KFold</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.042484</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.788399</td>\n",
+       "      <td>(16,)</td>\n",
+       "      <td>0.039216</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.036735</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.78449</td>\n",
+       "      <td>(8,)</td>\n",
+       "      <td>0.035102</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.036735</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.78449</td>\n",
+       "      <td>(8,)</td>\n",
+       "      <td>0.034286</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.036735</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.78449</td>\n",
+       "      <td>(8,)</td>\n",
+       "      <td>0.035918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>0.09</td>\n",
+       "      <td>0.036735</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.78449</td>\n",
+       "      <td>(8,)</td>\n",
+       "      <td>0.035918</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.037551</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.790204</td>\n",
+       "      <td>(8,)</td>\n",
+       "      <td>0.040816</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.037551</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.790204</td>\n",
+       "      <td>(8,)</td>\n",
+       "      <td>0.04</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.034286</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.790204</td>\n",
+       "      <td>(8,)</td>\n",
+       "      <td>0.041633</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.034286</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.790204</td>\n",
+       "      <td>(8,)</td>\n",
+       "      <td>0.042449</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>0.07</td>\n",
+       "      <td>0.044082</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.788571</td>\n",
+       "      <td>(8,)</td>\n",
+       "      <td>0.044082</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      LogisticRegression           DummyClassifier           MLPClassifier  \\\n",
+       "            Param. Value     Error    Param. Value     Error  Param. Value   \n",
+       "KFold                                                                        \n",
+       "1                   0.09  0.042484             NaN  0.788399         (16,)   \n",
+       "2                   0.09  0.036735             NaN   0.78449          (8,)   \n",
+       "3                   0.09  0.036735             NaN   0.78449          (8,)   \n",
+       "4                   0.09  0.036735             NaN   0.78449          (8,)   \n",
+       "5                   0.09  0.036735             NaN   0.78449          (8,)   \n",
+       "6                   0.07  0.037551             NaN  0.790204          (8,)   \n",
+       "7                   0.07  0.037551             NaN  0.790204          (8,)   \n",
+       "8                   0.07  0.034286             NaN  0.790204          (8,)   \n",
+       "9                   0.07  0.034286             NaN  0.790204          (8,)   \n",
+       "10                  0.07  0.044082             NaN  0.788571          (8,)   \n",
+       "\n",
+       "                 \n",
+       "          Error  \n",
+       "KFold            \n",
+       "1      0.039216  \n",
+       "2      0.035102  \n",
+       "3      0.034286  \n",
+       "4      0.035918  \n",
+       "5      0.035918  \n",
+       "6      0.040816  \n",
+       "7          0.04  \n",
+       "8      0.041633  \n",
+       "9      0.042449  \n",
+       "10     0.044082  "
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -574,16 +759,152 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1361.1000000000001"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.ceil((1/k1) * X.shape[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from itertools import combinations\n",
+    "def McNemar(models: list, X: np.array, y: np.array, k1: int, rs: int):\n",
+    "    kf1 = StratifiedKFold(k1, shuffle = True, random_state=rs)\n",
+    "    k = 0\n",
+    "    matrix = dict.fromkeys(combinations(range(len(models)), 2))\n",
+    "    for train_idx, test_idx in kf1.split(X, y):\n",
+    "        test_size = test_idx.shape[0]\n",
+    "        yABC = np.empty(shape=(len(models), test_size))\n",
+    "        for i, model in enumerate(models):\n",
+    "            model.fit(X[train_idx,:], y[train_idx])\n",
+    "            y_pred = model.predict(X[test_idx, :])\n",
+    "            yABC[i, :] = 1*(y_pred == y[test_idx])\n",
+    "        for j in list(matrix.keys()):\n",
+    "            if k == 0:\n",
+    "                matrix[j] = np.empty(shape=(k1, 4))\n",
+    "            n11 = np.sum(yABC[j[0],:]*yABC[j[1],:])\n",
+    "            n12 = np.sum(yABC[j[0],:]*(1-yABC[j[1],:]))\n",
+    "            n21 = np.sum(yABC[j[1],:]*(1-yABC[j[0],:]))\n",
+    "            n22 = np.sum((1-yABC[0,:])*(1-yABC[1,:]))\n",
+    "            matrix[j][k] = np.array([n11, n12, n21, n22])\n",
+    "        k+=1\n",
+    "    return matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 184,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "random_state = 1\n",
+    "models = [LogisticRegression(multi_class='multinomial', solver='lbfgs', max_iter=1000, random_state= random_state),\n",
+    "        DummyClassifier(strategy='most_frequent', random_state=random_state),\n",
+    "        MLPClassifier(solver='adam', activation='logistic', alpha=1e-4, random_state=random_state, max_iter=1000, \n",
+    "        early_stopping=True, validation_fraction=0.2, warm_start=True, verbose=False, learning_rate ='adaptive', learning_rate_init=0.01)]\n",
+    "k1 = 10\n",
+    "m = McNemar(models, X_stdz, y_, k1, rs = random_state)\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 198,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "values = m[(0,2)][:,[1,2]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 199,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[22., 29.],\n",
+       "       [13., 26.],\n",
+       "       [19., 11.],\n",
+       "       [11., 25.],\n",
+       "       [14., 24.],\n",
+       "       [19., 24.],\n",
+       "       [13., 20.],\n",
+       "       [29., 22.],\n",
+       "       [16., 31.],\n",
+       "       [15., 20.]])"
+      ]
+     },
+     "execution_count": 199,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$H_0:$ Model A has the same performarnce as model B \n",
+    "\n",
+    "$H_1:$ Model A and model B has different performance\n",
+    "\n",
+    "small p_value-> we discard H0 -> Model A and Model B have different performance"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 200,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.2005309955139687"
+      ]
+     },
+     "execution_count": 200,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from scipy.stats import binomtest, binom\n",
+    "binom.cdf(min(values[0, 0], values[0, 1]), values[0, 0]+ values[0, 1], 1/2)"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### **2.5 Train logistic regression model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "So in the fourth exercise do we have to repeat the parameter selection process or can just go ahead with the best parameter selection for each model?"
    ]
   },
   {
