--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -23,7 +23,6 @@
     "import seaborn as sb\n",
     "from scipy import stats\n",
     "from scipy.stats import pearsonr\n",
-    "from utils.Plots import Donutplot\n",
     "from tqdm import tqdm\n",
     "# import dataframe_image as df___i\n",
     "\n",
@@ -123,7 +122,6 @@
     "                    min_param = np.NaN\n",
     "                df.loc(axis = 1)[name, 'Error'][k] = np.min(error_test)\n",
     "                df.loc(axis = 1)[name, 'Param. Value'][k] = min_param\n",
-    "\n",
     "    return df"
    ]
   },
@@ -212,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -223,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -360,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,17 +367,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mean Accuracy: 0.924 (+-0.006)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# cv = RepeatedStratifiedKFold(n_splits=10, n_repeats=3, random_state=1)\n",
     "# # evaluate the model and collect the scores\n",
@@ -397,7 +387,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +401,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:11<00:00,  1.17s/it]\n"
+      "100%|██████████| 10/10 [00:26<00:00,  2.62s/it]\n"
      ]
     },
     {
@@ -425,7 +415,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:10<00:00,  1.05s/it]\n"
+      "100%|██████████| 10/10 [00:24<00:00,  2.47s/it]\n"
      ]
     },
     {
@@ -439,7 +429,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:11<00:00,  1.13s/it]\n"
+      "100%|██████████| 10/10 [00:25<00:00,  2.52s/it]\n"
      ]
     },
     {
@@ -453,7 +443,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:11<00:00,  1.15s/it]\n"
+      "100%|██████████| 10/10 [00:23<00:00,  2.35s/it]\n"
      ]
     },
     {
@@ -467,7 +457,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:12<00:00,  1.21s/it]\n"
+      "100%|██████████| 10/10 [00:22<00:00,  2.30s/it]\n"
      ]
     },
     {
@@ -481,7 +471,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:11<00:00,  1.19s/it]\n"
+      "100%|██████████| 10/10 [00:23<00:00,  2.32s/it]\n"
      ]
     },
     {
@@ -495,7 +485,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:11<00:00,  1.18s/it]\n"
+      "100%|██████████| 10/10 [00:24<00:00,  2.40s/it]\n"
      ]
     },
     {
@@ -509,7 +499,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:11<00:00,  1.19s/it]\n"
+      "100%|██████████| 10/10 [00:24<00:00,  2.47s/it]\n"
      ]
     },
     {
@@ -523,7 +513,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:12<00:00,  1.21s/it]\n"
+      "100%|██████████| 10/10 [00:25<00:00,  2.51s/it]\n"
      ]
     },
     {
@@ -537,7 +527,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:13<00:00,  1.32s/it]\n"
+      "100%|██████████| 10/10 [00:25<00:00,  2.53s/it]\n"
      ]
     }
    ],
@@ -557,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -733,12 +723,14 @@
        "10     0.044082  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "Table"
+   ]
   },
   {
    "cell_type": "code",
@@ -746,8 +738,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ = df.round(3)\n",
-    "df_.to_csv(r'Results\\Table_classification3.csv')"
+    "Table = Table.round(3)\n",
+    "Table.to_csv(r'Results\\Table_classification3.csv')"
    ]
   },
   {
@@ -759,34 +751,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1361.1000000000001"
-      ]
-     },
-     "execution_count": 57,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "np.ceil((1/k1) * X.shape[0])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
+    "\n",
     "def McNemar(models: list, X: np.array, y: np.array, k1: int, rs: int):\n",
     "    kf1 = StratifiedKFold(k1, shuffle = True, random_state=rs)\n",
     "    k = 0\n",
+    "    # setting up all the possible combinations between the different models\n",
     "    matrix = dict.fromkeys(combinations(range(len(models)), 2))\n",
     "    for train_idx, test_idx in kf1.split(X, y):\n",
     "        test_size = test_idx.shape[0]\n",
@@ -809,56 +783,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "random_state = 1\n",
-    "models = [LogisticRegression(multi_class='multinomial', solver='lbfgs', max_iter=1000, random_state= random_state),\n",
+    "models = [LogisticRegression(multi_class='multinomial', solver='lbfgs', max_iter=1000, random_state= random_state, C = 0.07),\n",
     "        DummyClassifier(strategy='most_frequent', random_state=random_state),\n",
-    "        MLPClassifier(solver='adam', activation='logistic', alpha=1e-4, random_state=random_state, max_iter=1000, \n",
+    "        MLPClassifier(solver='adam', activation='logistic', alpha=1e-4, random_state=random_state, max_iter=1000, hidden_layer_sizes=(8, ),\n",
     "        early_stopping=True, validation_fraction=0.2, warm_start=True, verbose=False, learning_rate ='adaptive', learning_rate_init=0.01)]\n",
     "k1 = 10\n",
-    "m = McNemar(models, X_stdz, y_, k1, rs = random_state)\n",
-    "    "
+    "m = McNemar(models, X_stdz, y_, k1, rs = random_state)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 198,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "values = m[(0,2)][:,[1,2]]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 199,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[22., 29.],\n",
-       "       [13., 26.],\n",
-       "       [19., 11.],\n",
-       "       [11., 25.],\n",
-       "       [14., 24.],\n",
-       "       [19., 24.],\n",
-       "       [13., 20.],\n",
-       "       [29., 22.],\n",
-       "       [16., 31.],\n",
-       "       [15., 20.]])"
-      ]
-     },
-     "execution_count": 199,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "values"
+    "We create the matrix with shape (3: number of models, 10: nº of k-folds, 4: matrix shape)\n",
+    "\n",
+    "The matrix is squeezed so we have:\n",
+    "$$\\begin{bmatrix}\n",
+    " n_{11}    & n_{12}  \\\\\n",
+    " n_{21}    & n_{22}\n",
+    "\\end{bmatrix}$$\n",
+    "\n",
+    "Here is $[ n_{11}, n_{12}, n_{21}, n_{22} ]$"
    ]
   },
   {
@@ -873,24 +823,81 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### **LOGISTIC REGRESSION *vs*. BASELINE**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "combs = list(combinations(range(len(models)), 2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from scipy.stats import binom\n",
+    "pv_dict = dict.fromkeys(combs)\n",
+    "for j in combs:\n",
+    "    vals = m[j][:, 1:3]\n",
+    "    pv_dict[j] = [binom.cdf(min(vals[i]), n = sum(vals[i]), p = 1/2) for i in range(len(vals))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2005309955139687"
+       "{(0, 1): [2.5403754272396735e-227,\n",
+       "  2.4350383720818866e-216,\n",
+       "  3.481608773694227e-240,\n",
+       "  5.735400020391545e-244,\n",
+       "  1.3833870737052688e-222,\n",
+       "  1.6934407187275294e-234,\n",
+       "  3.481608773694227e-240,\n",
+       "  2.4175494872612855e-241,\n",
+       "  1.047113650801317e-231,\n",
+       "  1.386110312892082e-237],\n",
+       " (0, 2): [0.4999999999999999,\n",
+       "  0.271192005928242,\n",
+       "  0.30379568063654006,\n",
+       "  0.07480639219284058,\n",
+       "  0.4300250329542905,\n",
+       "  0.308859658514848,\n",
+       "  0.559802089359664,\n",
+       "  0.33890431957123024,\n",
+       "  0.07480639219284058,\n",
+       "  0.15525232953950768],\n",
+       " (1, 2): [1.7518520262671617e-228,\n",
+       "  9.568706682553475e-215,\n",
+       "  2.2752733852491847e-227,\n",
+       "  1.1513523507647245e-238,\n",
+       "  3.924031063671476e-215,\n",
+       "  8.537464322011789e-226,\n",
+       "  2.748244669921656e-225,\n",
+       "  2.748244669921656e-225,\n",
+       "  9.685968058562802e-231,\n",
+       "  3.527544746475826e-225]}"
       ]
      },
-     "execution_count": 200,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "from scipy.stats import binomtest, binom\n",
-    "binom.cdf(min(values[0, 0], values[0, 1]), values[0, 0]+ values[0, 1], 1/2)"
+    "pv_dict"
    ]
   },
   {
