--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -852,48 +852,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we get all the p-values from the McNemar's test from all the possible models combinations.\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{(0, 1): [2.5403754272396735e-227,\n",
-       "  2.4350383720818866e-216,\n",
-       "  3.481608773694227e-240,\n",
-       "  5.735400020391545e-244,\n",
-       "  1.3833870737052688e-222,\n",
-       "  1.6934407187275294e-234,\n",
-       "  3.481608773694227e-240,\n",
-       "  2.4175494872612855e-241,\n",
-       "  1.047113650801317e-231,\n",
-       "  1.386110312892082e-237],\n",
-       " (0, 2): [0.4999999999999999,\n",
-       "  0.271192005928242,\n",
-       "  0.30379568063654006,\n",
-       "  0.07480639219284058,\n",
-       "  0.4300250329542905,\n",
-       "  0.308859658514848,\n",
-       "  0.559802089359664,\n",
-       "  0.33890431957123024,\n",
-       "  0.07480639219284058,\n",
-       "  0.15525232953950768],\n",
-       " (1, 2): [1.7518520262671617e-228,\n",
-       "  9.568706682553475e-215,\n",
-       "  2.2752733852491847e-227,\n",
-       "  1.1513523507647245e-238,\n",
-       "  3.924031063671476e-215,\n",
-       "  8.537464322011789e-226,\n",
-       "  2.748244669921656e-225,\n",
-       "  2.748244669921656e-225,\n",
-       "  9.685968058562802e-231,\n",
-       "  3.527544746475826e-225]}"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pv_dict' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\Diego\\Documents\\DTU\\IntroML\\Project1_ML\\Project2.ipynb Cell 40\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Diego/Documents/DTU/IntroML/Project1_ML/Project2.ipynb#X54sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m pv_dict\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'pv_dict' is not defined"
+     ]
     }
    ],
    "source": [
