--- a/Project2.ipynb
+++ b/Project2.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
     "                    min_param = np.NaN\n",
     "                df.loc(axis = 1)[name, 'Error'][k] = np.min(error_test)\n",
     "                df.loc(axis = 1)[name, 'Param. Value'][k] = min_param\n",
-    "    return df"
+    "    return df, test_idx1"
    ]
   },
   {
@@ -210,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -358,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -367,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,12 +382,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### **2.3 Cross-Validation table**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -401,7 +408,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:26<00:00,  2.62s/it]\n"
+      "100%|██████████| 10/10 [00:18<00:00,  1.89s/it]\n"
      ]
     },
     {
@@ -415,7 +422,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:24<00:00,  2.47s/it]\n"
+      "100%|██████████| 10/10 [00:17<00:00,  1.70s/it]\n"
      ]
     },
     {
@@ -429,7 +436,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:25<00:00,  2.52s/it]\n"
+      "100%|██████████| 10/10 [00:17<00:00,  1.77s/it]\n"
      ]
     },
     {
@@ -443,7 +450,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:23<00:00,  2.35s/it]\n"
+      "100%|██████████| 10/10 [00:17<00:00,  1.75s/it]\n"
      ]
     },
     {
@@ -457,7 +464,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:22<00:00,  2.30s/it]\n"
+      "100%|██████████| 10/10 [00:17<00:00,  1.71s/it]\n"
      ]
     },
     {
@@ -471,7 +478,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:23<00:00,  2.32s/it]\n"
+      "100%|██████████| 10/10 [00:17<00:00,  1.76s/it]\n"
      ]
     },
     {
@@ -485,7 +492,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:24<00:00,  2.40s/it]\n"
+      "100%|██████████| 10/10 [00:16<00:00,  1.69s/it]\n"
      ]
     },
     {
@@ -499,7 +506,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:24<00:00,  2.47s/it]\n"
+      "100%|██████████| 10/10 [00:18<00:00,  1.82s/it]\n"
      ]
     },
     {
@@ -513,7 +520,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:25<00:00,  2.51s/it]\n"
+      "100%|██████████| 10/10 [00:17<00:00,  1.74s/it]\n"
      ]
     },
     {
@@ -527,13 +534,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:25<00:00,  2.53s/it]\n"
+      "100%|██████████| 10/10 [00:17<00:00,  1.80s/it]\n"
      ]
     }
    ],
    "source": [
     "params = {}\n",
-    "params['LogisticRegression'] = {'C': [0.03, 0.05, 0.07, 0.09]}\n",
+    "params['LogisticRegression'] = {'C': [0.05, 0.07, 0.08, 0.09]}\n",
     "params['DummyClassifier'] = [None]\n",
     "params['MLPClassifier'] = {'hidden_layer_sizes': [(8,), (16,), (20,)]}\n",
     "models = [LogisticRegression(multi_class='multinomial', solver='lbfgs', max_iter=1000, random_state= random_state),\n",
@@ -542,12 +549,12 @@
     "        early_stopping=True, validation_fraction=0.2, warm_start=True, verbose=False, learning_rate ='adaptive', learning_rate_init=0.01)]\n",
     "k1 = 10\n",
     "k2 = 10\n",
-    "Table = twolevelcv(X = X_stdz, y = y_, k1 = k1, k2 = k2, models = models, params = params, rs = random_state)"
+    "Table, test_set_outer = twolevelcv(X = X_stdz, y = y_, k1 = k1, k2 = k2, models = models, params = params, rs = random_state)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -610,7 +617,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.09</td>\n",
+       "      <td>0.08</td>\n",
        "      <td>0.036735</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
@@ -619,7 +626,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.09</td>\n",
+       "      <td>0.08</td>\n",
        "      <td>0.036735</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
@@ -628,7 +635,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.09</td>\n",
+       "      <td>0.08</td>\n",
        "      <td>0.036735</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
@@ -637,7 +644,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.09</td>\n",
+       "      <td>0.08</td>\n",
        "      <td>0.036735</td>\n",
        "      <td>NaN</td>\n",
        "      <td>0.78449</td>\n",
@@ -698,10 +705,10 @@
        "            Param. Value     Error    Param. Value     Error  Param. Value   \n",
        "KFold                                                                        \n",
        "1                   0.09  0.042484             NaN  0.788399         (16,)   \n",
-       "2                   0.09  0.036735             NaN   0.78449          (8,)   \n",
-       "3                   0.09  0.036735             NaN   0.78449          (8,)   \n",
-       "4                   0.09  0.036735             NaN   0.78449          (8,)   \n",
-       "5                   0.09  0.036735             NaN   0.78449          (8,)   \n",
+       "2                   0.08  0.036735             NaN   0.78449          (8,)   \n",
+       "3                   0.08  0.036735             NaN   0.78449          (8,)   \n",
+       "4                   0.08  0.036735             NaN   0.78449          (8,)   \n",
+       "5                   0.08  0.036735             NaN   0.78449          (8,)   \n",
        "6                   0.07  0.037551             NaN  0.790204          (8,)   \n",
        "7                   0.07  0.037551             NaN  0.790204          (8,)   \n",
        "8                   0.07  0.034286             NaN  0.790204          (8,)   \n",
@@ -723,7 +730,7 @@
        "10     0.044082  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,12 +741,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
     "Table = Table.round(3)\n",
-    "Table.to_csv(r'Results\\Table_classification3.csv')"
+    "Table.to_csv(r'Results\\Table_classification.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1361,)"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_set_outer.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
    ]
   },
   {
@@ -751,7 +785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -783,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -793,7 +827,7 @@
     "        MLPClassifier(solver='adam', activation='logistic', alpha=1e-4, random_state=random_state, max_iter=1000, hidden_layer_sizes=(8, ),\n",
     "        early_stopping=True, validation_fraction=0.2, warm_start=True, verbose=False, learning_rate ='adaptive', learning_rate_init=0.01)]\n",
     "k1 = 10\n",
-    "m = McNemar(models, X_stdz, y_, k1, rs = random_state)"
+    "m = McNemar(models, X_stdz[test_set_outer, :], y_[test_set_outer], k1, rs = random_state)"
    ]
   },
   {
@@ -826,12 +860,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **LOGISTIC REGRESSION *vs*. BASELINE**"
+    "Also we set:\n",
+    "\n",
+    "**Model 0**: LR\n",
+    "\n",
+    "**Model 1**: Baseline\n",
+    "\n",
+    "**Model 2**: MLP\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ***P-Values***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -840,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -852,32 +899,116 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "Here we get all the p-values from the McNemar's test from all the possible models combinations.\n"
+    "McNemar_pv = pd.DataFrame(columns = combs, index = range(10))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "i = 0\n",
+    "for n in pv_dict.values():\n",
+    "    print(f'{combs[i]}')\n",
+    "    for j, k in enumerate(n):\n",
+    "        McNemar_pv[combs[i]][j] = \"{:.3e}\".format(k)\n",
+    "        print(\"{:.3e}\".format(k))\n",
+    "    i+=1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "McNemar_pv.to_csv('McNemar_pv.csv')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Confidence intervals"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def calcs(mat: np.array):\n",
+    "    \"\"\"Calculate f y g from a McNemar Matrix\n",
+    "\n",
+    "    Args:\n",
+    "        matrix (np.array): McNemar matrix from one K-fold\n",
+    "\n",
+    "    Returns:\n",
+    "        _type_: f and g\n",
+    "    \"\"\"\n",
+    "    n = mat.sum()\n",
+    "    n12 = mat[1]\n",
+    "    n21 = mat[2]\n",
+    "    E_th = (n12 - n21)/n \n",
+    "    Q = (n**2 (n+1)*(E_th +1)*(1-E_th)) / (n*(n12 +n21) - (n12 - n21)**2)\n",
+    "    f = (Q-1)*(E_th+1)/2\n",
+    "    g = (Q-1)*(1-E_th)/2\n",
+    "    return f, g"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def interval(f,g):\n",
+    "    beta.ppf\n",
+    "    return theta_L, theta_R"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pv_dict' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Diego\\Documents\\DTU\\IntroML\\Project1_ML\\Project2.ipynb Cell 40\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Diego/Documents/DTU/IntroML/Project1_ML/Project2.ipynb#X54sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m pv_dict\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'pv_dict' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "array([[34., 92.,  2.,  9.],\n",
+       "       [34., 93.,  1.,  8.],\n",
+       "       [32., 92.,  3.,  9.],\n",
+       "       [35., 91.,  0., 10.],\n",
+       "       [34., 98.,  1.,  3.],\n",
+       "       [34., 84.,  1., 17.],\n",
+       "       [31., 93.,  5.,  7.],\n",
+       "       [33., 96.,  3.,  4.],\n",
+       "       [31., 93.,  5.,  7.],\n",
+       "       [32., 94.,  4.,  6.]])"
+      ]
+     },
+     "execution_count": 90,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "pv_dict"
+    "m[combs[0]]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
